1c import/export with xml
